<resources>
    <string name="app_name">Starbasket_Seller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_category">Select Category</string>
    <string name="hint_subcategory">Select SubCategory</string>
    <string name="hint_subsubcategory">Select SubSubCategory</string>
    <string name="email">Mail</string>
    <string name="pleaee_wait">Please wait...</string>
    <string name="have_subcat">I have subcategory</string>
    <string name="have_subsubcat">I have subsubcategory</string>
    <string name="have_nosubcat">I don\'t have subcategory</string>
    <string name="have_nosubsubcat">I don\'t have subsubcategory</string>
    <string name="product_name">Enter product name</string>
    <string name="product_actualprice">Enter actual price</string>
    <string name="product_unit">Enter no. of quantity</string>
    <string name="product_varient">Enter varient</string>
    <string name="product_sellingprice">Enter selling price</string>
    <string name="product_short_description">Type sort description</string>
    <string name="product_full_description">Enter full description</string>
    <string name="add_product">Add Product</string>
    <string name="register">SignUp</string>
    <string name="name">Enter full name</string>
    <string name="firstname">Enter first name</string>
    <string name="emailadress">Enter your email</string>
    <string name="mobile">Enter 10 digit mobile number</string>
    <string name="businessname">Enter your business name</string>
    <string name="address">Enter your complete address</string>
    <string name="seller_dasboard">Your Dashboard</string>
    <string name="order_id">OrderId:</string>
    <string name="pincode">Pincode</string>
    <string name="password">Create Password</string>
    <string name="interotext">Join with us and sell your own products on Bankura\'s largest mobile e-commerce plateform!</string>
    <string name="newseller">New Seller</string>
    <string name="registered_seller">Registered Seller</string>
    <string name="new_order">New Order</string>
    <string name="new_addproduct">Add Product</string>
    <string name="new_viewedit">View/Edit Product</string>
    <string name="new_comletedorder">Completed Order</string>
    <string name="paymet">Payment</string>
    <string name="confirmpasswor">Comfirm Password</string>
    <string name="forgtpasword">Forgot Password?</string>
    <string name="add_varient">Add Varient</string>
    <string name="enterpassword">Enter password</string>
    <string name="stock_unit">No. of stock quantity</string>
    <string name="brand">Brand</string>
    <string name="lastname">Enter last name</string>
    <string name="competed_order">Completed Order</string>
    <string name="order_history">Order History</string>
    <string name="cancel_order">Cancel Order</string>
</resources>
