<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topToolbar"
        layout="@layout/common_toolbar" />

    <!--  <android.support.v4.widget.NestedScrollView
          android:id="@+id/scroll"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/topToolbar">-->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/topToolbar">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/productName"
                style="@style/ShankarEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/celias_medium"
                android:hint="@string/product_name"
                android:singleLine="true"
                android:text=""></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/Name">

            <EditText
                android:id="@+id/productUnit"
                style="@style/ShankarEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/celias_medium"
                android:hint="@string/product_varient"
                android:singleLine="true"
                android:text=""></EditText>
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/unit">

            <EditText
                android:id="@+id/productQuantity"
                style="@style/ShankarEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/celias_medium"
                android:hint="@string/stock_unit"
                android:singleLine="true"
                android:text=""></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/actual_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/quantity">

            <EditText
                android:id="@+id/productActual_price"
                style="@style/ShankarEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/celias_medium"
                android:hint="@string/product_actualprice"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text=""></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/selling_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/actual_price">

            <EditText
                android:id="@+id/productSelling_price"
                style="@style/ShankarEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/celias_medium"
                android:hint="@string/product_sellingprice"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:text=""></EditText>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/selling_price">

            <EditText
                android:id="@+id/productShortDescription"
                style="@style/ShankarEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/celias_medium"
                android:hint="@string/product_short_description"
                android:singleLine="true"
                android:text=""></EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/full_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/short_description">

            <EditText
                android:id="@+id/productFullDescription"
                style="@style/ShankarEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/celias_medium"
                android:hint="@string/product_full_description"
                android:singleLine="true"
                android:text=""></EditText>
        </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/picture"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toBottomOf="@+id/full_description"
                />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large"
            android:layout_margin="20dp"
            android:background="@color/maroon"
            android:drawableRight="@mipmap/ic_keyboard_arrow_right_white_24dp"
            android:text="Add"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>