<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topToolbar"
        layout="@layout/common_toolbar" />

    <!--  <android.support.v4.widget.NestedScrollView
          android:id="@+id/scroll"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/topToolbar">-->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/topToolbar">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ETName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Name"
                    style="@style/ShankarEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/celias_medium"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:text=""></EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ETemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ETName">

                <EditText
                    android:id="@+id/email"
                    style="@style/ShankarEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/celias_medium"
                    android:hint="@string/emailadress"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text=""></EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ETbusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ETemail">

                <EditText
                    android:id="@+id/business_name"
                    style="@style/ShankarEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/celias_medium"
                    android:hint="@string/address"
                    android:singleLine="true"
                    android:text=""></EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ETaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ETbusiness">

                <EditText
                    android:id="@+id/address"
                    style="@style/ShankarEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/celias_medium"
                    android:hint="@string/businessname"
                    android:singleLine="true"
                    android:text=""></EditText>
            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large"
                android:layout_margin="20dp"
                android:background="@color/maroon"
                android:drawableRight="@mipmap/ic_keyboard_arrow_right_white_24dp"
                android:text="Register"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/ETaddress" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>